adjust placement of menu items and add 5px top margin to logo-image to correct alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -123,6 +123,22 @@ footer {
         width: fit-content;
         padding-right: 1rem;
     }
+
+    #menu {
+        display: flex;
+    }
+
+    #menu > li {
+        padding-left: 1rem;
+    }
+
+    #nav-toggle-label {
+        display: none;
+    }
+
+    #logo-image {
+        margin: 5px 10px 0 0;
+    }
 }
 
 /* laptops and up from 992px */
